1. 检查更新调整为后台任务