@@ -143,7 +143,7 @@ public class AddPartitionPane extends BorderPane {
                 save.setGraphic(saveIcon);
                 failConsumer.accept(event.getSource().getException());
             });
-            new Thread(task).start();
+            Thread.ofVirtual().start(task);
         });
     }
 }
